--- a/Receiver/platformio.ini
+++ b/Receiver/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy40]
-platform = teensy
-board = teensy40
+[env:leonardo]
+platform = atmelavr
+board = leonardo
 framework = arduino
